# raytracing

./: CMakeLists.txt  Light.cpp  Light.h  Line.cpp  Line.h  MainWindow.cpp  MainWindow.h  Obstacle.cpp  Obstacle.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  TP arcade backup  Utils.cpp  Utils.h  main.cpp  operators.cpp  operators.h
